--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "querystring": "^0.2.0",
     "request": "^2.79.0",
     "slack": "^11.0.0",
+    "watson-developer-cloud": "^3.0.7",
     "wordfilter": "^0.2.6"
   },
   "devDependencies": {},
