--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
+    "slack": "^11.0.0",
+    "watson-developer-cloud": "^3.0.7",
     "wordfilter": "^0.2.6"
   },
   "devDependencies": {},
