--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.14.0",
     "express-hbs": "^1.0.4",
     "node-env-file": "^0.1.8",
+    "node-fetch": "^2.1.1",
     "querystring": "^0.2.0",
     "request": "^2.79.0",
     "slack": "^11.0.0",
